quick edit, embed resources:true

--- a/Kaggle_Final/classification/Dashboard - Classification.html
+++ b/Kaggle_Final/classification/Dashboard - Classification.html
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="bslib-grid-item html-fill-item bslib-grid" data-layout="fill" style="display: grid; grid-template-rows: 120px 320px 480px 320px; grid-auto-columns: minmax(0, 1fr);">
 <div class="card cell bslib-card html-fill-container" data-width="25%" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div id="5f031483" class="cell quarto-layout-panel html-fill-item html-fill-container" height="120" data-layout-ncol="2" data-standalone="true" width="25%" data-execution_count="2">
+<div id="071a8d63" class="cell quarto-layout-panel html-fill-item html-fill-container" data-layout-ncol="2" width="25%" data-standalone="true" height="120" data-execution_count="2">
 <div class="quarto-layout-row html-fill-item html-fill-container">
 <div class="quarto-layout-cell html-fill-item html-fill-container" style="flex-basis: 50.0%;justify-content: flex-start;">
 
@@ -138,7 +138,7 @@ ul.task-list li input[type="checkbox"] {
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div id="d2e9ce2d" class="cell quarto-layout-panel html-fill-item html-fill-container" height="320" data-execution_count="4" data-layout-ncol="2">
+<div id="17947947" class="cell quarto-layout-panel html-fill-item html-fill-container" data-execution_count="4" height="320" data-layout-ncol="2">
 <div class="quarto-layout-row html-fill-item html-fill-container">
 <div class="quarto-layout-cell html-fill-item html-fill-container" style="flex-basis: 50.0%;justify-content: flex-start;">
 
@@ -199,7 +199,7 @@ weighted avg       0.73      0.73      0.73       169
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div id="7819d1a3" class="cell quarto-layout-panel html-fill-item html-fill-container" height="480" data-execution_count="5" data-layout-ncol="2">
+<div id="5e9a2684" class="cell quarto-layout-panel html-fill-item html-fill-container" data-execution_count="5" height="480" data-layout-ncol="2">
 <div class="quarto-layout-row html-fill-item html-fill-container">
 <div class="quarto-layout-cell html-fill-item html-fill-container" style="flex-basis: 50.0%;justify-content: center;">
 <img src="Dashboard%20-%20Classification_files/figure-html/cell-6-output-1.png" class="img-fluid" width="616">
@@ -218,7 +218,7 @@ weighted avg       0.73      0.73      0.73       169
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div class="cell-output cell-output-display html-fill-item html-fill-container" data-execution_count="70">
+<div class="cell-output cell-output-display html-fill-item html-fill-container" data-execution_count="7">
 
 <div style="max-width:900px; margin:auto; text-align:left; padding:10px;" class="html-fill-item html-fill-container">
 
