--- a/Kaggle_Final/regression/dashboard/Regression_Dashboard2.html
+++ b/Kaggle_Final/regression/dashboard/Regression_Dashboard2.html
@@ -79,7 +79,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="bslib-grid-item html-fill-item bslib-grid" data-layout="fill" style="display: grid; grid-template-rows: 120px 565px 380px 320px; grid-auto-columns: minmax(0, 1fr);">
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div id="c6670382" class="cell quarto-layout-panel html-fill-item html-fill-container" data-layout-ncol="2" data-standalone="true" height="120" data-execution_count="1">
+<div id="f733745b" class="cell quarto-layout-panel html-fill-item html-fill-container" data-execution_count="1" height="120" data-layout-ncol="2" data-standalone="true">
 <div class="quarto-layout-row html-fill-item html-fill-container">
 <div class="quarto-layout-cell html-fill-item html-fill-container" style="flex-basis: 50.0%;justify-content: flex-start;">
 
@@ -131,7 +131,7 @@ ul.task-list li input[type="checkbox"] {
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div id="fe0d6953" class="cell quarto-layout-panel html-fill-item html-fill-container" data-layout-ncol="2" height="565" data-execution_count="2">
+<div id="89cad66d" class="cell quarto-layout-panel html-fill-item html-fill-container" data-execution_count="2" data-layout-ncol="2" height="565">
 <div class="quarto-layout-row html-fill-item html-fill-container">
 <div class="quarto-layout-cell html-fill-item html-fill-container" style="flex-basis: 50.0%;justify-content: center;">
 <img src="Regression_Dashboard2_files/figure-html/cell-3-output-1.png" class="img-fluid" width="561">
@@ -150,7 +150,7 @@ ul.task-list li input[type="checkbox"] {
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div id="37ad340a" class="cell quarto-layout-panel html-fill-item html-fill-container" data-layout-ncol="2" height="380" data-execution_count="3">
+<div id="a844c4bd" class="cell quarto-layout-panel html-fill-item html-fill-container" data-execution_count="3" data-layout-ncol="2" height="380">
 <div class="quarto-layout-row html-fill-item html-fill-container">
 <div class="quarto-layout-cell html-fill-item html-fill-container" style="flex-basis: 50.0%;justify-content: center;">
 <img src="Regression_Dashboard2_files/figure-html/cell-4-output-1.png" class="img-fluid" width="680">
@@ -169,7 +169,7 @@ ul.task-list li input[type="checkbox"] {
 </bslib-tooltip><script data-bslib-card-init="">bslib.Card.initializeAllCards();</script></div>
 <div class="card cell bslib-card html-fill-container" data-bslib-card-init="" data-require-bs-caller="card()" data-full-screen="false">
 <div class="card-body html-fill-item html-fill-container">
-<div class="cell-output cell-output-display html-fill-item html-fill-container" data-execution_count="52">
+<div class="cell-output cell-output-display html-fill-item html-fill-container" data-execution_count="8">
 
 <div style="max-width:900px; margin:auto; text-align:left; padding:10px;" class="html-fill-item html-fill-container">
 
